# Yingjie-work-trial-mnn-custom-inference-library

./: .gitignore  CMakeLists.txt  README.md
android/app/: build.gradle
android/app/src/androidTest/java/com/example/xqwen35stock/: ModelBootstrap.java  StockBenchmarkInstrumentationTest.java
android/app/src/main/cpp/: stock_benchmark_jni.cpp
android/benchmark_app/: build.gradle
android/benchmark_app/src/androidTest/java/com/example/xqwen35bench/: BenchmarkInstrumentationTest.java  ModelBootstrap.java
android/benchmark_app/src/main/cpp/: benchmark_jni.cpp
android/benchmark_app/src/main/java/com/example/xqwen35bench/: NativeBenchmark.java
customlib/: CMakeLists.txt
customlib/include/: xqwen35.h
customlib/packer/: pack_qwen35_xq4.py
customlib/runtime/: custom_model.cpp  custom_model.hpp  session.cpp  session.hpp  vulkan_backend.cpp  vulkan_backend.hpp
docs/: aws_devicefarm_runbook.md  connector_walkthrough.md  kernel_library_code_walkthrough_final.md  kernel_library_code_walkthrough_v14.md  kernels_walkthrough.md
patches/mnn/: 0001-qwen35-skip-weight-keep-meta-tensors.patch
results/reports/: final_devicefarm_report.json  final_devicefarm_report.md  final_vulkan_blocker_report.md  presentation_code_walkthrough_notes.md  quality_validation_vulkan_linear_state_report.md  qwen35_9b_devicefarm_v13_full_embeddings_report.json  qwen35_9b_devicefarm_v14_hotpath_presentation.pptx  qwen35_9b_devicefarm_v14_hotpath_summary.json  qwen35_9b_devicefarm_v14_hotpath_summary.md  qwen35_9b_kernel_library_walkthrough_devicefarm_v13.pptx  qwen35_9b_v27_presentation_code_walkthrough_final.pptx  vulkan_iteration_log.md
results/reports/evidence/: baseline_build_android_xqvk2.txt  baseline_build_mnn_android_xqvk2.txt  baseline_fetch_mnn_xqvk2.txt  baseline_host_build_xqvk2.txt  baseline_host_cmake_xqvk2.txt  baseline_host_ctest_xqvk2.txt  customlib_vulkan_full_benchmark_stopped.json  customlib_vulkan_gqa_integration_short_benchmark.json  customlib_vulkan_integration_short_benchmark.json  customlib_vulkan_integration_short_summary.json  customlib_vulkan_linear_state_integration_short_benchmark.json  customlib_vulkan_vector_trace_integration_short_v2_benchmark.json  customlib_vulkan_vector_trace_integration_short_v2_model_bootstrap.json  final_vulkan_attempt_fresh_repo_audit.json  quality_validation_custom_vulkan_linear_state_english.json  quality_validation_vulkan_linear_state_english_comparison.json  vulkan_final_android_build.txt  vulkan_final_host_build.txt  vulkan_final_host_ctest.txt  vulkan_gqa_selftest_passed.json  vulkan_integration_model_part_uploads_redacted.json  vulkan_linear_state_final_android_build.txt  vulkan_linear_state_final_host_build.txt  vulkan_linear_state_final_host_ctest.txt  vulkan_linear_state_selftest_passed.json  vulkan_vector3_selftest_passed.json  vulkan_w4a16_selftest_attempt1.json  vulkan_w4a16_selftest_attempt2_passed.json
scripts/: build_mnn_android.sh  fetch_mnn.ps1  package_mnn_model_zip.py
scripts/aws/: download_artifacts.py  make_report.py  schedule_benchmark_run.py  upload_artifact.py  wait_for_run.py
